Update help and about pages.

--- a/wwwroot/about.html
+++ b/wwwroot/about.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../favicon.ico">
 
-    <title>The National Map - About</title>
+    <title>Digital Earth Australia Map - About</title>
 
     <!-- Bootstrap core CSS -->
     <link href="help/css/bootstrap.min.css" rel="stylesheet">
@@ -43,16 +43,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://nationalmap.gov.au">
-            <img alt="Brand" src="help/img/nm-logo.png">
+          <a class="navbar-brand" href="http://maps.dea.ga.gov.au">
+            <img alt="Brand" src="images/DE-Australia-logo.png">
           </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">About the National Map</a></li>
+            <li class="active"><a href="#">About DE Australia Map</a></li>
             <li><a href="help/help.html">Help & FAQ</a></li>
             <li><a href="help/privacy.html">Privacy</a></li>
-            <li><a href="http://nationalmap.gov.au" target="blank">Launch the National Map</a></li>
+            <li><a href="http://maps.dea.ga.gov.au" target="blank">Launch DE Australia Map</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -63,56 +63,28 @@
     <div class="row">
     <div class="col-sm-9">
 
-    <h1>About the NationalMap</h2>
+    <h1>About the Digital Earth Australia Map</h2>
+      <p>Digital Earth Australia (DEA) Maps is a website for map-based access to DEA’s products. It’s developed by Data61 CSIRO for Geoscience Australia.</p>
+      <p>DEA uses satellite data to detect physical changes across Australia in unprecedented detail. It identifies soil and coastal erosion, crop growth, water quality and changes to cities and regions. Learn more about DEA at <a href="https://www.ga.gov.au/dea">https://www.ga.gov.au/dea</a>.
+      </p>
+      <p>DEA Maps aims to provide easy access to DEA’s products to help users to make more informed decisions.</p>
+      <p>To see what is available on DEA Maps, click the Add information button and expand a category to browse.</p>
 
-      <p>The <strong>NationalMap</strong> is a website for map-based access to spatial data from Australian government agencies.
-      It is an initiative of the Department of Communications and the Arts now currently managed by the Department of the Prime Minister and Cabinet and the software has been developed by Data61 working closely with the Department of Communications and the Arts, Geoscience Australia and other government agencies.</p>
+      <h2>How to use the DEA Map</h2>
 
-      <!-- 4:3 aspect ratio -->
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube-nocookie.com/embed/gsEAq0x0xh4?rel=0"></iframe>
-      </div>
-
-      <p>The <strong>NationalMap</strong> is a fully open architecture. When you access data through it, you are typically
-      accessing the data directly from the government department or agency which is the custodian of that data.</p>
-
-      <p>The <strong>NationalMap</strong>...</p>
-      <ul>
-         <li>provides easy access to authoritative and other spatial data to government, business and the public</li>
-         <li>facilitates the opening of data by federal, state and local government bodies</li>
-         <li>provides an open framework of geospatial data services that supports commercial and community innovation</li>
-      </ul>
-
-      <p>To see what data is available on the NationalMap, refer to the Data Catalogue in the
-      <a href="http://nationalmap.gov.au/">NationalMap</a> itself. Click the <b>Data Catalogue</b> tab and expand the Data Set group names.</p>
-
-      <h2>How to use the NationalMap</h2>
-
-      <p>Just go to <a href="http://nationalmap.gov.au/">http://nationalmap.gov.au/</a>. Most operations are obvious,
+      <p>Just go to <a href="https://maps.dea.ga.gov.au">https://maps.dea.ga.gov.au/</a>. Most operations are obvious,
       but you can click the <a href="help/help.html">Help and FAQs</a> button near the top of this page for specific instructions.</p>
 
-      <p>For further information email <a href="mailto:data@pmc.gov.au">data@pmc.gov.au</a>.
-      Feel free to send us feedback and bug reports.</p>
 
-      <h2>Contributing Data to NationalMap</h2>
+      <h2>Contributing Data to DEA Map</h2>
 
-      <p>Spatial data sets which are placed on <a href="http://data.gov.au/" target="_blank">data.gov.au</a> using supported data formats and protocols (such as WMS) will
-      automatically be included in the NationalMap. See the <a href="help/help.html">How To...</a> page for more information.</p>
+      <p>If you’re working on spatial datasets or producing them (such as CSVs with geolocation information) and you think they would be beneficial, you can contact dea@ga.gov.au to suggest inclusion in the Data Catalogue.</p>
 
-      <p>Australian government agencies that wish to find out more information about contributing data sets to the NationalMap
-      should email <a href="mailto:data@pmc.gov.au">data@pmc.gov.au</a> with their questions.
-      Typically, the NationalMap does not store the data itself, but refers to the data servers of the data contributors,
-      directly taking that data and presenting it overlaid over a map. Therefore, agencies providing data directly must have the data
-      available via an online server using a standard protocol.</p>
+      <h2>The DEA Maps software</h2>
 
-      <h2>NationalMap Software</h2>
-
-      <p>The NationalMap is Open Source software available as a
-      <a href="https://github.com/NICTA/nationalmap" target="_blank">Github project</a>. The core platform, <a href="https://github.com/TerriaJS/terriajs" target="_blank">TerriaJS</a>, was initially
-      developed by Data61 for the NationalMap, but has subsequently been used for other projects. It has been made available
-      to assist with the development of other spatial data viewing applications.</p>
-
-      <p>The NationalMap core software is licensed under the Apache License, Version 2.0 (the "License"). You may not use the source code files
+      <p>DEA Maps is open source software available as a
+      <a href="https://github.com/TerriaJS/de-australia-map" target="_blank">Github project</a>. The core platform, <a href="https://github.com/TerriaJS/terriajs" target="_blank">TerriaJS</a>, was initially
+      developed by Data61 for the NationalMap. You may not use the source code files
       except in compliance with the License. You may obtain a copy of the License at
       <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">http://www.apache.org/licenses/LICENSE-2.0</a>.
       Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
@@ -121,64 +93,70 @@
 
       <h2>Additional Open Source Software Used</h2>
 
-      <p>In developing the NationalMap, Data61 has used open source software and contributed back to it.  NationalMap leverages these
+      <p>In developing the DEA Map, Data61 has used open source software and contributed back to it. DEA Map leverages these
       excellent open source libraries:</p>
 
       <ul>
+        <li><a href="http://www.opendatacube.org" target="_blank">Open Data Cube</a></li>
         <li><a href="https://github.com/TerriaJS/terriajs" target="_blank">TerriaJS</a></li>
         <li><a href="http://cesiumjs.org/" target="_blank">Cesium</a></li>
         <li><a href="http://leafletjs.com/" target="_blank">Leaflet</a></li>
       </ul>
-      <p>The <a href="https://github.com/NICTA/nationalmap/blob/master/LICENSE.md">complete list</a> is available with the <a href="https://github.com/NICTA/nationalmap">NationalMap source code</a></p>
+      <p>The <a href="https://github.com/TerriaJS/de-australia-map/blob/master/LICENSE.md">complete list</a> is available with the <a href="https://github.com/TerriaJS/de-australia-map">DEA Map source code</a></p>
 
-      <h2><a class="anchor" name="terms"></a>Terms &amp; Conditions</h2>
-      <p>The information displayed on the NationalMap is for general informational purposes only, and is not
-      intended to provide any commercial, financial, or legal advice. Any information in connection with
-      the NationalMap may not be appropriate to your individual needs.  You must  exercise your own
-      independent, skill, care and judgment with respect to how you use the information displayed on the
-      National Map.<p>
+      <h3>Contributing to the open source community</h3>
+      <p>You are encouraged to contribute to the code or simply suggest new features by submitting an issue directly in the open repository. Make sure you give a detailed description of the use case for the new functionalities.</p>
 
-      <p>As a condition of using the NationalMap, you must comply with all applicable laws, regulations and
-      third party rights (including, without limitation, laws regarding the import or export of data or
-      software, privacy and local laws). You must not use NationalMap to encourage or promote illegal
-      activity or violation of third party rights. Some parts of NationalMap (like the URL shortening
-      function) rely upon third party APIs.</p>
+      <h2>Data attribution</h2>
+      <p>The content presented in DEA Maps is sourced from a wide range of organisations. Details about each data custodian and their contact details can be found in the data catalogue, usually under "Data Custodian" or "Description".</p>
 
-      <p>In any important matter, you should seek professional advice relevant to your own
-      circumstances.</p>
+      <h4>Base maps</h4>
+      <ul>
+        <li><a href="https://www.microsoft.com/en-us/maps/">Bing Maps</a> - From
+        Microsoft Corporation. <a href="https://www.microsoft.com/en-us/maps/product">Commercial Licence</a>.
+        </li>
+        <li><a href="https://www.naturalearthdata.com/downloads/10m-raster-data/10m-natural-earth-2/">Natural Earth II</a> - From
+        Natural Earth. <a href="https://www.naturalearthdata.com/about/terms-of-use/">Public Domain</a>.
+        </li>
+        <li><a href="https://earthobservatory.nasa.gov/Features/NightLights">Black Marble</a> - From NASA's Earth Observatory <a href="https://earthobservatory.nasa.gov/image-use-policy">Use Policy</a>.
+        </li>
+        <li><a href="https://carto.com/location-data-services/basemaps/">Positron (Light) and Dark Matter</a> - From
+        Carto. <a href="https://carto.com/location-data-services/basemaps/">Commercial Licence</a>.
+        </li>
+      </ul>
+      <h4>Terrain:</h4>
+      <ul>
+        <li><a href="https://cesium.com/content/cesium-world-terrain/">Cesium World Terrain</a> - From Cesium Ion. <a
+      href="https://cesium.com/legal/terms-of-service/">Commercial License</a>.
+        </li>
+      </ul>
+      <h4>Geocoders:</h4>
+      <ul>
+        <li><a href="https://data.gov.au/dataset/geocoded-national-address-file-g-naf">GNAF</a> - Incorporates or developed using G-NAF ©PSMA Australia Limited licensed by the Commonwealth of Australia under the Open Geo-coded National Address File (G-NAF) End User Licence Agreement.</li>
+        <li><a href="https://www.microsoft.com/en-us/maps/">Bing Maps</a> - From Microsoft Corporation.</li>
+        <li><a href="https://ecat.ga.gov.au/geonetwork/srv/eng/catalog.search#/metadata/e19a92fa-257c-159d-e044-00144fdd4fa6">Gazatteer of Australia</a> - For Official Place Names. <a href="https://s3-ap-southeast-2.amazonaws.com/fsdf.placenames/DPS/Composite+Gazetteer+DPS.pdf">More information</a></li>
+      </ul>
 
-      <p>The information displayed on the NationalMap was consolidated by the Department of the Prime Minister and Cabinet.</p>
 
-      <p>The Department, Data61 and Geoscience Australia (“We”) make no representations or warranties
-      regarding the accuracy or completeness of any content or the product in connection with the
-      NationalMap. We disclaim all responsibility and all liability (including without limitation, liability in
-      negligence, for errors or omissions) for all expenses, loss, damage and costs which you might incur
-      as a result of the information displayed on the NationalMap and your use of it.</p>
+      <h2>Terms and conditions</h2>
+      <p>The information displayed on DEA Maps is for general informational purposes only, and is not intended to provide any commercial, financial, or legal advice. Any information in connection with DEA Maps may not be appropriate to your individual needs. You must exercise your own independent, skill, care and judgment with respect to how you use the information displayed on DEA Maps.</p>
+      <p>As a condition of using DEA Maps, you must comply with all applicable laws, regulations and third party rights (including, without limitation, laws regarding the import or export of data or software, privacy and local laws). You must not use DEA Maps to encourage or promote illegal activity or violation of third party rights. Some parts of DEA Maps (like the URL shortening function) rely upon third party APIs.</p>
+      <p>In any important matter, you should seek professional advice relevant to your own circumstances.</p>
+      <p>The information displayed on DEA Maps was consolidated by Geoscience Australia and Data61.</p>
+      <p>Data61 and Geoscience Australia (“We”) make no representations or warranties regarding the accuracy or completeness of any content or the product in connection with DEA Maps. We disclaim all responsibility and all liability (including without limitation, liability in negligence, for errors or omissions) for all expenses, loss, damage and costs which you might incur as a result of the information displayed on DEA Maps and your use of it.</p>
+      <p>DEA Maps must not be used for navigation or precise spatial analysis or for any activities where the use or failure of DEA Maps could lead to death, personal injury, or environmental damage (such as the operation of nuclear facilities, air traffic control, or life support systems).</p>
 
-      <p>The NationalMap must not be used for navigation or precise spatial analysis or for any activities
-      where the use or failure of the NationalMap could lead to death, personal injury, or environmental damage
-      (such as the operation of nuclear facilities, air traffic control, or life support systems).</p>
+      <h3>Access</h3>
+      <p>Any information provided by data custodians displayed on DEA Maps is provided as is and on the understanding that the respective data custodian is not responsible for, nor guarantees the timeliness, accuracy or completeness of that information. If you intend to rely on any information displayed on DEA Maps, then you must apply in writing to the respective data custodian for further authorisation.</p>
 
-      <h3>Access to data:</h3>
-      <p>Any information provided by data custodians displayed on the NationalMap is provided as is and on
-      the understanding that the respective data custodian is not responsible for, nor guarantees the
-      timeliness, accuracy or completeness of that information. If you intend to rely on any information
-      displayed on the NationalMap or data.gov.au, then you must apply in writing to the respective data
-      custodian for further authorisation.</p>
-
-      <p>You acknowledge that your use of the NationalMap or data.gov.au means that you have provided
-      your acceptance of these terms and conditions.</p>
-
+      <p>You acknowledge that your use of DEA Maps means that you have provided your acceptance of these terms and conditions.</p>
+      <p>You must consider the usage rights and restrictions of the basemap and each activated dataset when using the output of DEA Maps in broadcast, print, or other distribution. The terms of use of the default Bing Maps basemap may be found here: https://www.microsoft.com/maps/product/terms.html.</p>
 
     </div>
 
     <aside class="col-sm-3 partners">
-      <img class="center-block" src="help/img/pmc-stacked.jpg" alt="Department of the Prime Minister and Cabinet brand image">
-      <img class="center-block" src="help/img/Comms.jpg" alt="Department of Communications brand image">
       <img class="center-block" src="help/img/GA-dark.png" alt="Geoscience Australia brand image">
-      <img class="center-block" src="help/img/data61-white.jpg" alt="Data61 brand image">
-      <img class="center-block" src="help/img/iawards.png" alt="2015 iAwards - New South Wales award winner">
-      <img class="center-block" src="help/img/Finalist-Innovation.gif" alt="Finalist - Innovation - CeBIT AU Business Awards">
+      <img class="center-block" src="images/GA-DEA-Logo-Inline-370x73.png" alt="Digital Earth Australia brand image">
     </aside>
 
   </div>
@@ -186,9 +164,8 @@
 
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">&copy; Department of the Prime Minister and Cabinet, Department of Communications, and National ICT Australia Limited (NICTA) 2014-2015. All Rights Reserved.</p>
-        <p><strong><a href="about.html#terms">Terms and conditions</a></strong> – <strong><a href="help/privacy.html">Privacy</a></strong></p>
-
+        <p class="text-muted">&copy; Geoscience Australia 2019. All Rights Reserved.</p>
+        <p><a href="https://www.ga.gov.au/privacy">Privacy</a></strong></p>
       </div>
     </footer>
 
