--- a/wwwroot/help/map-navigation.html
+++ b/wwwroot/help/map-navigation.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>The National Map - Help & FAQ - Map Navigation and Display</title>
+    <title>The DEA Map - Help & FAQ - Map Navigation and Display</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -43,16 +43,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://nationalmap.gov.au">
-            <img alt="Brand" src="img/nm-logo.png">
+             <a class="navbar-brand" href="http://maps.dea.ga.gov.au">
+            <img alt="Brand" src="../images/DE-Australia-logo.png">
           </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="../about.html">About the National Map</a></li>
+            <li><a href="../about.html">About the DEA Map</a></li>
             <li class="active"><a href="help.html">Help & FAQ</a></li>
             <li><a href="privacy.html">Privacy</a></li>
-            <li><a href="http://nationalmap.gov.au" target="blank">Launch the National Map</a></li>
+            <li><a href="http://maps.dea.ga.gov.au" target="blank">Launch the DEA Map</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -68,11 +68,11 @@
 
         <h4 class="nav-header">How to...</h4>
         <ul class="how-to">
-          <li><a href="help.html">Get started with the National Map</a></li>
+          <li><a href="help.html">Get started with the DEA Map</a></li>
           <li><a href="help.html#feature-info">Find out about a displayed feature</a></li>
           <li><a href="help.html#add-data">Display my own spatial data</a></li>
-          <li><a href="help.html#share">Share my National Map view</a></li>
-          <li><a href="help.html#contribute">Contribute Data Sets to the National Map</a></li>
+          <li><a href="help.html#share">Share my DEA Map view</a></li>
+          <li><a href="help.html#contribute">Contribute Data Sets to the DEA Map</a></li>
         </ul>
 
         <h4 class="nav-header">Key Features</h4>
@@ -84,8 +84,8 @@
 
         <h4 class="nav-header">Frequently Asked Questions</h4>
         <ul class="faq">
-          <li><a href="faq.html">National Map Operation</a></li>
-          <li><a href="faq.html#nm-systemdata">National Map system and data</a></li>
+          <li><a href="faq.html">DEA Map Operation</a></li>
+          <li><a href="faq.html#nm-systemdata">DEA Map system and data</a></li>
           <li><a href="faq.html#nm-reportingissues">Reporting issues</a></li>
         </ul>
 
@@ -98,7 +98,7 @@
 
       <h1>Map Navigation and Display</h1>
 
-        <p class="no-indent">There are multiple ways to navigate NationalMap's map view. Use whichever method you prefer.</p>
+        <p class="no-indent">There are multiple ways to navigate DEA's map view. Use whichever method you prefer.</p>
         <p class="no-indent"><em>Hint: Mouse over the <b>Compass Control</b> (pictured below) to see help on its use.</em></p>
 
         <img src="img/map-controls.jpg" class="screenshot img-responsive" alt="screenshot of map controls">
@@ -174,9 +174,8 @@
 
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">&copy; Department of the Prime Minister and Cabinet, Department of Communications, and National ICT Australia Limited (NICTA) 2014-2015. All Rights Reserved.</p>
-        <p><strong><a href="../about.html#terms">Terms and conditions</a></strong> – <strong><a href="privacy.html">Privacy</a></strong></p>
-
+        <p class="text-muted">&copy; Geoscience Australia 2019. All Rights Reserved.</p>
+        <p><a href="https://www.ga.gov.au/privacy">Privacy</a></strong></p>
       </div>
     </footer>
 
