--- a/wwwroot/help/privacy.html
+++ b/wwwroot/help/privacy.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>The National Map - Privacy</title>
+    <title>The DE Australia Map - Privacy</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -43,16 +43,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://nationalmap.gov.au">
-            <img alt="Brand" src="img/nm-logo.png">
+             <a class="navbar-brand" href="http://maps.dea.ga.gov.au">
+            <img alt="Brand" src="../images/DE-Australia-logo.png">
           </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="../about.html">About the National Map</a></li>
+            <li><a href="../about.html">About the DEA Map</a></li>
             <li><a href="help.html">Help & FAQ</a></li>
             <li class="active"><a href="privacy.html">Privacy</a></li>
-            <li><a href="http://nationalmap.gov.au" target="blank">Launch the National Map</a></li>
+            <li><a href="http://maps.dea.ga.gov.au" target="blank">Launch the DEA Map</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -65,9 +65,9 @@
 
       <h1>Privacy</h1>
 
-      <p>The Department of the Prime Minister and Cabinet is covered by the Privacy Act 1988 (Cth) (‘the Privacy Act’). The Privacy Act contains 13 Australian Privacy Principles (‘the APPs’) which governs how Australian Government agencies should collect, use, store and disclose personal information, and how individuals can access records containing their personal information. General information about the Privacy Act and the APPs can be found on the website of the <a href="http://www.oaic.gov.au/privacy/privacy-news">Office of the Australian Information Commissioner</a>.</p>
+      <p>Geoscience Australia is covered by the Privacy Act 1988 (Cth) (‘the Privacy Act’). The Privacy Act contains 13 Australian Privacy Principles (‘the APPs’) which governs how Australian Government agencies should collect, use, store and disclose personal information, and how individuals can access records containing their personal information. General information about the Privacy Act and the APPs can be found on the website of the <a href="http://www.oaic.gov.au/privacy/privacy-news">Office of the Australian Information Commissioner</a>.</p>
 
-      <p>We are committed to protecting your privacy. <a href="http://www.dpmc.gov.au/pmc/accountability-and-reporting/pmc-privacy-practices/privacy-policy">Our Privacy Policy can be accessed via this link</a>. The NationalMap website (this website) complies with the Australian Information Commissioner’s APP Guidelines and with our APP Privacy Policy.</p>
+      <p>We are committed to protecting your privacy. See our <a href="https://www.ga.gov.au/privacy"> Privacy Policy</a>. The DEA Maps website (this website) complies with the Australian Information Commissioner’s APP Guidelines and with our APP Privacy Policy.</p>
 
       <p>You are reminded that there are risks involved in sending information over the internet.</p>
 
@@ -89,7 +89,7 @@
 
       <p>• the disclosure is reasonably necessary for the enforcement of the criminal law or of a law imposing a pecuniary penalty, or for the protection of public revenue.</p>
 
-      <h2>Information logged when browsing the NationalMap website</h2>
+      <h2>Information logged when browsing the DEA Maps website</h2>
 
       <p>We do not collect personal information about you if you only browse this website.</p>
 
@@ -109,7 +109,7 @@
 
       <p>We use the information we collect from your browsing of this website for statistical analysis, system administration, monitoring of this website’s security, customisation of this website to users’ needs, and the evaluation, research and development of this website.</p>
 
-            <p>In order to give you a better experience, we use a URL shortening service provided by a third party. That service may also track the clicks and referrers (sharers) of the NationalMap.</p>
+      <p>In order to give you a better experience, we use a URL shortening service provided by a third party. That service may also track the clicks and referrers (sharers) of the DEA Maps.</p>
 
       <p>No attempt will be made to identify users due to their browsing activities on this website, except in the unlikely event of an investigation, for example, where a law enforcement agency may exercise a warrant or subpoena. The information we collect from your browsing of this website will only be disclosed to a third party if it is required or authorised by law.</p>
 
@@ -145,9 +145,8 @@
 
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">&copy; Department of the Prime Minister and Cabinet, Department of Communications, and National ICT Australia Limited (NICTA) 2014-2015. All Rights Reserved.</p>
-        <p><strong><a href="../about.html#terms">Terms and conditions</a></strong> – <strong><a href="privacy.html">Privacy</a></strong></p>
-
+        <p class="text-muted">&copy; Geoscience Australia 2019. All Rights Reserved.</p>
+        <p><a href="https://www.ga.gov.au/privacy">Privacy</a></strong></p>
       </div>
     </footer>
 
