--- a/wwwroot/about.html
+++ b/wwwroot/about.html
@@ -138,7 +138,7 @@
       </ul>
 
 
-      <h2>Terms and conditions</h2>
+      <h2 id="tacs">Terms and conditions</h2>
       <p>The information displayed on DEA Maps is for general informational purposes only, and is not intended to provide any commercial, financial, or legal advice. Any information in connection with DEA Maps may not be appropriate to your individual needs. You must exercise your own independent, skill, care and judgment with respect to how you use the information displayed on DEA Maps.</p>
       <p>As a condition of using DEA Maps, you must comply with all applicable laws, regulations and third party rights (including, without limitation, laws regarding the import or export of data or software, privacy and local laws). You must not use DEA Maps to encourage or promote illegal activity or violation of third party rights. Some parts of DEA Maps (like the URL shortening function) rely upon third party APIs.</p>
       <p>In any important matter, you should seek professional advice relevant to your own circumstances.</p>
